# web-scraper-rag

./: .gitignore  LICENSE  README.md  debug_chat.py  docker-compose.yml  pyproject.toml  streamlit_app.py  test_gemini.py  verify_system.py
app/: main.py
app/api/endpoints/: chat.py  ingest.py  scrape.py  search.py
app/core/: config.py  graph_schema.py  llm.py
app/db/: init_graph.py
app/schemas/: ingest.py  scrape.py  search.py
app/services/: chat_service.py  graph_service.py  llm_factory.py  scraper_service.py  search_service.py
app/workers/: celery_app.py  tasks.py
